add_subdirectory(complex)
add_subdirectory(rational)
add_subdirectory(dynarr)
add_subdirectory(stackarr)
add_subdirectory(stacklst)
add_subdirectory(queuelst)
add_subdirectory(queuearr)
add_subdirectory(queuelstpr)
add_subdirectory(bitset)
add_subdirectory(stacklstt)
add_subdirectory(stackarrt)
add_subdirectory(queuearrt)
add_subdirectory(queuelstt)
add_subdirectory(queuelstprt)