add_executable(test_stackarr test_stackarr.cpp)
target_link_libraries(test_stackarr stackarr)
add_executable(test_stacklst test_stacklst.cpp)
target_link_libraries(test_stacklst stacklst)
add_executable(test_queuelst test_queuelst.cpp)
target_link_libraries(test_queuelst queuelst)
add_executable(test_queuearr test_queuearr.cpp)
target_link_libraries(test_queuearr queuearr)